fix bug for horizontal overflow

--- a/app/sass/common.sass
+++ b/app/sass/common.sass
@@ -35,7 +35,7 @@
 body 
     font-family: Quicksand, sans-serif
     font-weight: 300
-    overflow: hidden
+    overflow-x: hidden
     position: relative
 
 .container-lg
